RGPD add remove user logged endpoint
